--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "firebase": "^5.4.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-flip-move": "^3.0.2",
+    "react-scripts": "1.1.5",
+    "react-transition-group": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
